--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-theme-vivia-leo",
-  "version": "0.4.2",
+  "version": "0.4.2-1",
   "description": "A theme for Hexo",
   "repository": {
     "type": "git",
