--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-theme-vivia-leo",
-  "version": "0.4.2-1",
+  "version": "0.4.2-2",
   "description": "A theme for Hexo",
   "repository": {
     "type": "git",
@@ -11,7 +11,7 @@
     "theme",
     "vivia"
   ],
-  "author": "saicaca",
+  "author": "saicaca & leo",
   "license": "MIT",
   "dependencies": {
     "colorjs.io": "^0.4.2",
