--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "saicaca & leo",
   "license": "MIT",
   "dependencies": {
+    "awesome-bootstrap-checkbox": "^1.0.1",
     "colorjs.io": "^0.4.2",
     "hexo-symbols-count-time": "^0.7.1",
     "js-yaml": "^4.1.0"
